# cascade

./: .dockerignore  .env.example  .gitignore  Dockerfile  GATE_FIX_IMPLEMENTATION.md  JUNGLE_COMPLIANCE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
cascade/: __init__.py  cli.py  commands.py  config.py  context_pack.py  conversation.py  costs.py  doctor.py  gate_fix.py  gates.py  github.py  lifecycle.py  mandate_meta.py  migration.py  opencode.py  opencode_setup.py  prompts.py  shell.py  ssh_config.py  standards.py  state.py  worktrees.py
examples/: jungle.yaml
scripts/: cascade-docker-wrapper.sh  cascade-host-wrapper.sh  prepare_docker_ssh.py
tests/: conftest.py  test_architecture_commands.py  test_cli_model_backed.py  test_cli_no_model.py  test_closeout.py  test_complete_flow.py  test_config.py  test_conversation.py  test_cost_control.py  test_doctor_and_standards.py  test_doctor_env.py  test_env_autoload.py  test_gate_fix.py  test_gates.py  test_github_project_sync.py  test_integration_lifecycle.py  test_jungle_preflight_modes.py  test_loop.py  test_makefile_workflow_mapping.py  test_migration.py  test_opencode_modes.py  test_opencode_setup.py  test_preflight_gate.py  test_prompts.py  test_repairs.py  test_ssh_config.py  test_state.py  test_workspace_paths.py  test_worktrees.py  test_wrapper_installation.py
tests/smoke/: smoke_docker_era_migration.sh  smoke_docker_mode_flow.sh  smoke_github_project_sync.sh  smoke_host_native_metadata_mandate.sh  smoke_simulated_docker_runtime_network.sh
